# riftx

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: app.rs  config.rs  fuzzy.rs  github.rs  main.rs  providers.rs  theme.rs  ui.rs
