[package]
name        = "riftx"
version     = "0.0.7"
edition     = "2021"
description = "Blazing-fast TUI to explore & extract files from GitHub / GitLab / Codeberg / Gitea — no clone"
license     = "MIT"
repository  = "https://github.com/your/riftx"
keywords    = ["github", "gitlab", "gitea", "tui", "cli"]

[[bin]]
name = "riftx"
path = "src/main.rs"

[dependencies]
ratatui      = "0.28"
crossterm    = { version = "0.28", features = ["event-stream"] }
tokio        = { version = "1",    features = ["full"] }
reqwest      = { version = "0.12", features = ["json", "stream"] }
serde        = { version = "1",    features = ["derive"] }
serde_json   = "1"
toml         = "0.8"
dirs         = "5"
futures-util = "0.3"
anyhow       = "1"
bytes        = "1"
sha2         = "0.10"
zip          = { version = "2", default-features = false, features = ["deflate"] }
flate2       = "1"
tar          = "0.4"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
